Fix spacing, color capialization

--- a/css/main.css
+++ b/css/main.css
@@ -10,37 +10,37 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   box-sizing: border-box;
-  font: normal 100%/1.3 'Montserrat', sans-serif;
+  font: normal 100%/1.3 Montserrat, sans-serif;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
- body {
-   margin: 0;
-   padding: 0;
-   background-color: #3D5F76;
-   text-align: center;
- }
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #3d5f76;
+  text-align: center;
+}
 
- header {
-   position: relative;
- }
+header {
+  position: relative;
+}
 
-  a:hover{
-   text-decoration: none;
-   background-color: #50261A;
-   color: #E5A747;
- }
+a:hover {
+  text-decoration: none;
+  background-color: #50261a;
+  color: #e5a747;
+}
 
- h1 ,h2 ,h3 {
-   font-family: 'Lobster', cursive;
- }
+h1, h2, h3 {
+  font-family: Lobster, cursive;
+}
 
 h1 {
-  background-color: #975E2F;
-  color: #E5A747;
+  background-color: #975e2f;
+  color: #e5a747;
 }
 
 nav {
@@ -53,7 +53,7 @@ nav {
   padding: 0;
   display: none;
   list-style-type: none;
-  background-color: #975E2F;
+  background-color: #975e2f;
   position: absolute;
   right: 0;
   top: 100%;
